# vd-agent-win32

./: .gitmodules  Makefile.am  NEWS  autogen.sh  configure.ac  mingw-spice-vdagent.spec  mingw-spice-vdagent.spec.in  spice-vdagent.wxs.in  test-log  test-png  vdagent.sln
common/: stdint.h  test-log.cpp  vdcommon.cpp  vdcommon.h  vdlog.cpp  vdlog.h  version.rc
tests/: clipboard.py
vdagent/: as_user.cpp  as_user.h  desktop_layout.cpp  desktop_layout.h  display_configuration.cpp  display_configuration.h  display_setting.cpp  display_setting.h  file_xfer.cpp  file_xfer.h  image.cpp  image.h  imagepng.cpp  imagepng.h  imagetest.cpp  pci_vdi_port.cpp  port_forward.cpp  port_forward.h  resource.h  vdagent.cpp  vdagent.rc  vdagent.vcproj  vdi_port.cpp  virtio_vdi_port.h
vdagent_helper/: vdagent_helper.cpp  vdagent_helper.vcproj
vdservice/: pci_vdi_port.cpp  pci_vdi_port.h  resource.h  vdi_port.cpp  vdi_port.h  vdservice.cpp  vdservice.rc  vdservice.vcproj  virtio_vdi_port.cpp  virtio_vdi_port.h
